--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Logo/Banner Navigation  -->
    <header class="banner">
         <img class="logo" src="img/Logo.png" alt="Stories and Slices Logo">
-        <h1>Stories &amp; Slices</h1>
+        <h1 class="title">Stories &amp; Slices</h1>
     </header>
           
          <nav>
