--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
 <body>
     <header class="banner">
         <img class="logo" src="img/Logo.png" alt="Stories and Slices Logo">
-        <h1>Stories &amp; Slices</h1>
+        <h1>Contact Me !</h1>
     </header>
           
          <nav>
-            <ul>
+            <ul class="navlinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="challenge.html">Reading Challenge</a></li>
