--- a/review.html
+++ b/review.html
@@ -18,7 +18,7 @@
     </header>
           
          <nav>
-            <ul>
+            <ul class="navlinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="challenge.html">Reading Challenge</a></li>
