--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="challenge.html">Reading Challenge</a>
-                <a href="Contact.html">Contact Me</a>
+                <a href="contact.html">Contact Me</a>
                 <a href="review.html">Archive</a>
             
         </div>
